resolved the overflowing problem

--- a/public/css/store.css
+++ b/public/css/store.css
@@ -1,4 +1,4 @@
 .Store{
     background-color:whitesmoke;
-    min-height: 10vw;
+    min-height: 20vw;
 }
